# FHN-Bot

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
Scraper/Scraperhose/: Article.cs  DB.cs  Metrics.cs  Program.cs  Scraperhose.csproj  Scraperhose.sln
SummariseAnything/SummariseAnything/: Article.cs  Config.cs  Program.cs  Scrapers.cs  SummariseAnything.csproj  SummariseAnything.sln
src/: article.rs  db.rs  main.rs  metrics.rs
