[package]
name = "Scraperhose"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
#article_scraper = "2.1.1"
article_scraper = { path = "/home/rari/repos/FHN-RT/ArticleScraper/article_scraper-master/article_scraper" }
url = "2.5.4"
html2text = "0.13.6"
mysql_async = "0.35.1"
chrono = "0.4.39"
futures-util = "0.3.31"
log = "0.4.25"
env_logger = "0.11.6"
futures = "0.3.31"
regex = "1.11.1"
feed-rs = { version = "2.3.1", features = ["sanitize"] }
sysinfo = "0.33.1"
[profile.release]
opt-level = 3
lto = true

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
lto = false
panic = "unwind"